--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
     </nav>
     <!-- Masthead-->
     <header class="masthead">
-        <div class="container">
+        <!-- <div class="container">
             <div class="masthead-subheading">Welcome To Canucks Army!</div>
             <div class="masthead-heading text-uppercase">I'm Clark</div>
             <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
-        </div>
+        </div> -->
     </header>
     <!-- Services-->
     <section class="page-section" id="services">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Services</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading text-uppercase">Welcome to Canucks Army!</h2>
+                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
@@ -305,8 +305,8 @@
                 <div class="col-lg-4">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                        <h4>Jacob</h4>
-                        <p class="text-muted">Co-founder</p>
+                        <h4>Jakob</h4>
+                        <p class="text-muted">Lead Developer</p>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Jacob Twitter Profile"><i
                                 class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Jacob Facebook Profile"><i
